force-app/main/default/objects/Park__c/Park__c.object-meta.xml
<CustomObject>
    <label>Park</label>
    <nameField>
        <label>Park Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>