force-app/main/default/objects/Park__c/fields/Lead_Ranger__c.field-meta.xml
<CustomField>
    <fullName>Lead_Ranger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Ranger</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parks</relationshipLabel>
    <relationshipName>Parks</relationshipName>
    <type>Lookup</type>
</CustomField>