force-app/main/default/objects/Park__c/fields/Protected_Animal_Preserve__c.field-meta.xml
<CustomField>
    <fullName>Protected_Animal_Preserve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Protected Animal Preserve</label>
    <type>Checkbox</type>
</CustomField>