force-app/main/default/objects/Park__c/listViews/full_view.listView-meta.xml
<ListView>
    <fullName>full_view</fullName>
    <columns>NAME</columns>
    <columns>Lead_Ranger__c</columns>
    <columns>Protected_Animal_Preserve__c</columns>
    <filterScope>Mine</filterScope>
    <label>full view</label>
</ListView>